Zadanie 13 - Car Service fixing and refactoring